WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228827
REGRESSION (
r277010
): GPUProcessProxy should send tccd mach lookup sandbox extension
https://bugs.webkit.org/show_bug.cgi?id=228827
Summary
REGRESSION (r277010): GPUProcessProxy should send tccd mach lookup sandbox ex...
youenn fablet
Reported
2021-08-05 08:15:02 PDT
GPUProcessProxy should send tccd mach lookup sandbox extension
Attachments
Patch
(1.72 KB, patch)
2021-08-05 08:17 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-08-05 08:17:43 PDT
<
rdar://problem/81567186
>
youenn fablet
Comment 2
2021-08-05 08:17:45 PDT
Created
attachment 434986
[details]
Patch
Per Arne Vollan
Comment 3
2021-08-05 10:02:05 PDT
Comment on
attachment 434986
[details]
Patch R=me. In which cases do we create this extension?
youenn fablet
Comment 4
2021-08-05 10:14:06 PDT
(In reply to Per Arne Vollan from
comment #3
)
> Comment on
attachment 434986
[details]
> Patch > > R=me. In which cases do we create this extension?
When capturing camera or mic.
EWS
Comment 5
2021-08-05 10:18:26 PDT
Committed
r280699
(
240296@main
): <
https://commits.webkit.org/240296@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434986
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug