GPUProcessProxy should send tccd mach lookup sandbox extension https://bugs.webkit.org/show_bug.cgi?id=228827

Reviewed by Per Arne Vollan.

In https://bugs.webkit.org/show_bug.cgi?id=225319, I mistakenly moved from mach lookup extension to generic extension.
Reverting that change.

* UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::addTCCDSandboxExtension):


Canonical link: https://commits.webkit.org/240296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280699 268f45cc-cd09-0410-ab3c-d52691b4dbfc